--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,12 @@ a:hover {
   color: #535bf2;
 }
 
-body,html {
+body,
+html {
   margin: 0;
   width: 100%;
-  height:100%;
+  height: 100%;
 }
-
 
 h1 {
   font-size: 3.2em;
