--- a/src/styles/icon/iconfont.css
+++ b/src/styles/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4171024 */
-  src: url("iconfont.woff2?t=1689591895961") format("woff2"),
-    url("iconfont.woff?t=1689591895961") format("woff"),
-    url("iconfont.ttf?t=1689591895961") format("truetype");
+  src: url('iconfont.woff2?t=1689686093483') format('woff2'),
+       url('iconfont.woff?t=1689686093483') format('woff'),
+       url('iconfont.ttf?t=1689686093483') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-GitHub:before {
+  content: "\ea0a";
 }
 
 .icon-zitishanchuxian:before {
@@ -224,3 +228,4 @@
 .icon-zitijiacu:before {
   content: "\ec83";
 }
+
