--- a/src/styles/icon/iconfont.css
+++ b/src/styles/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4171024 */
-  src: url('iconfont.woff2?t=1690106120882') format('woff2'),
-       url('iconfont.woff?t=1690106120882') format('woff'),
-       url('iconfont.ttf?t=1690106120882') format('truetype');
+  src: url("iconfont.woff2?t=1690106120882") format("woff2"),
+    url("iconfont.woff?t=1690106120882") format("woff"),
+    url("iconfont.ttf?t=1690106120882") format("truetype");
 }
 
 .iconfont {
@@ -232,4 +232,3 @@
 .icon-zitijiacu:before {
   content: "\ec83";
 }
-
